# CascadeCNN

./: README.md
Models/12c/: 12c.caffemodel  deploy.prototxt  solver.prototxt  train_val.prototxt
Models/12cal/: 12cal.caffemodel  deploy.prototxt  solver.prototxt  train_val.prototxt
Models/24c/: 24c.caffemodel  deploy.prototxt  solver.prototxt  train_val.prototxt
Models/24cal/: 24cal.caffemodel  deploy.prototxt  solver.prototxt  train_val.prototxt
Models/48c/: deploy.prototxt  solver.prototxt  train_val.prototxt
Models/48cal/: deploy.prototxt  solver.prototxt  train_val.prototxt
detection/: CMakeCache.txt  CMakeLists.txt  CascadeCNN  CascadeCNN.cpp  CascadeCNN.h  Makefile  cmake_install.cmake  main.cpp
result/: record-1.txt  record-cpu.txt  record-gpu.txt  record.txt
result/FDDB_evaluation/FDDB-folds/: merge_txt.sh
result/FDDB_evaluation/evaluation/: evaluate.cpp
result/FDDB_evaluation/face_detection/: CMakeLists.txt  fddb_detection.cpp  fddb_detection.h  main.cpp
result/MegaFace_evaluation/: CMakeLists.txt  extractor.py
script/: plot_ROC_curve.py  time.py
